--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <h1>Breaking CORS</h1>
 <p>Use it only for testing API.</p>
 <h2>API</h2>
-<p><strong>POST</strong> <code>/call</code></p>
+<p><strong>GET | POST | PUT</strong> <code>/call</code></p>
 <p><strong> Parameters</strong></p>
 <p><code>* required</code></p>
 <table>
